--- a/css/styles.css
+++ b/css/styles.css
@@ -167,8 +167,14 @@ nav {
     display: block; }
 
 /* MAIN  */
-main p {
-  padding: .5rem 2vw; }
+main {
+  grid-row-start: 3; }
+  main p {
+    padding: .5rem 2vw; }
+  main h1 {
+    padding: .5rem 2vw;
+    font-size: 2rem;
+    color: #b40000; }
 
 /* FOOTER  */
 footer {
